--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -1,3 +1,5 @@
+
+@import './core.scss';
 *{
     padding: 0px;
     margin: 0px;
@@ -5,5 +7,38 @@
 }
 
 body , html{
-    overflow-x: hidden;
+    overflow: clip;
+    width: 100%;
+}
+body{
+}
+
+
+a{
+    color: inherit;
+    text-decoration: none !important;
+}
+
+.m-top{
+    margin-top: 80px;
+}
+
+.m-bottom{
+    margin-top: 80px;
+}
+
+.Btn{
+    width: 160px;
+    height: 43px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #1C1C1C;
+    border: 1px solid #1C1C1C;
+    font-weight: 600;
+    text-transform: capitalize;
+    &.primary{
+        border: 1px solid $primary;
+        background-color: $primary;
+    }
 }
