--- a/src/assets/styles/layout.scss
+++ b/src/assets/styles/layout.scss
@@ -1,7 +1,195 @@
 
+@import './core.scss';
+
 
 // start navbar 
 
-
+.navbar-container{
+    background-color: #373737be;
+    color: #fff;
+    position: fixed;
+    z-index: 111;
+    top: 0;
+    right: 0;
+    left: 0;
+    a{
+        color: #fff;
+    }
+    .main-nav{
+        display: flex;
+        position: relative;
+        align-items: center;
+        justify-content: space-between;
+        .open-bar-nav{
+            display: none;
+        }
+        nav{
+            display: flex;
+            align-items: center;
+            gap: 50px;
+            .close-icon{
+                display: none;
+            }
+            &.active{
+                top: 0;
+            }
+            .close-icon{
+                position: absolute;
+                top: 20px;
+                right: 20px;
+                cursor: pointer;
+                font-size: 18px;
+            }    
+            a{
+                font-size: 15px;
+                font-weight: 500;
+                &.router-link-active{
+                    color: $primary;
+                }
+            }
+        }
+        .lang{
+            display: flex;
+            align-items: center;
+            gap: 5px;
+            select{
+                outline: none;
+                color: #fff;
+                option{
+                    color: #333;
+                }
+            }
+            i{
+                font-size: 11px;
+            }
+        }
+        .icons{
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            .icon{
+                border: 1px solid $grey1;
+                border-radius: 5px;
+                width: 20px;
+                height: 18px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                i{
+                    color: $primary;
+                    font-size: 10px;
+                }
+            }
+        }
+        .search-container{
+            position: relative;
+            i{
+                cursor: pointer;
+            }
+            .search-input{
+                background-color: #fff;
+                box-shadow: 2px 1px 5px 0px black;
+                position: absolute;
+                border-radius: 6px;
+                top: 47px;
+                width: 270px;
+                padding:4px 10px;
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                transform: translateX(400%);
+                transition: 0.4s all;
+                &.active{
+                    transform: translateX(0);
+                }
+                i{
+                    color: #333;
+                }
+                input{
+                    width: 90%;
+                    outline: none;
+                }
+            }
+        }
+    }
+}
 
 // end navbar 
+
+
+
+// start footer 
+
+footer{
+    background-color: $black2;
+    width: 100%;
+//   padding: 50px;
+.logo-container{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    img{
+        width: 250px;
+        // background-color: red;
+    }
+    p{
+        color: #fff;
+        margin-top: 15px;
+    }
+    .icons{
+        display: flex;
+        align-items: center;
+        gap: 20px;
+        .icon{
+            border: 1px solid $grey1;
+            padding: 2px 10px;
+            i{
+                color: $primary;
+                font-size: 12px;
+            }
+        }
+    }
+}
+.links-container{
+    margin-top: 20px;
+    
+    h5{
+        color: #fff;
+        margin-bottom: 20px;
+    }
+    .links{
+        display: flex;
+        flex-direction: column;
+        gap: 13px;
+        .link{
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            span , i{
+                color: #fff;
+            }
+        }
+    }
+    &.contact{
+        .links{
+            gap: 50px;
+        }
+    }
+}
+.line{
+    width: 100%;
+    height: 1px;
+    background-color: $grey2;
+    margin: 30px 0px;
+}
+.foot{
+    p , span{
+        color: #fff;
+        &.active{
+            color: $primary;
+        }
+    }
+}
+}
+
+// end footer 
