--- a/src/assets/styles/mobile.scss
+++ b/src/assets/styles/mobile.scss
@@ -1,8 +1,133 @@
+// start navbar
+
+@media (max-width: 900px) {
+    .navbar-container {
+        nav {
+            position: fixed;
+            background-color: $black2;
+            width: 100%;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            gap: 25px !important;
+            height: 400px;
+            top: -100%;
+            right: 0;
+            transition: 0.4s all;
+            left: 0;
+            z-index: 111;
+            .close-icon {
+                display: block !important;
+            }
+        }
+        .open-bar-nav {
+            display: block !important;
+        }
+        .search-container {
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            .search-input {
+                top: 95px !important;
+                width: 95% !important;
+            }
+        }
+    }
+}
+
+// end navbar
+
+// start footer
+
+@media (max-width: 900px) {
+    footer {
+        .logo-container {
+            align-items: center;
+        }
+        .links-container {
+            h5 {
+                font-size: 18px;
+            }
+            .links {
+                gap: 18px;
+                .link {
+                    font-size: 14px;
+                }
+            }
+            &.contact {
+                .links {
+                    gap: 15px;
+                }
+            }
+        }
+    }
+}
+
+// end footer
+
+// start swipers
+
+@media (max-width: 900px) {
+    .mySwiper {
+        .text {
+            width: auto !important;
+            padding: 20px !important;
+        }
+    }
+    
+    .about-home{
+        height: fit-content !important;
+        padding: 30px 0px;
+        p{
+            width: 100% !important;
+            padding: 0px 10px;
+            font-size: 16px !important;
+        }
+    }
 
 
-// start navbar 
+    .brands-container{
+        img{
+            width: 140px;
+            margin: 20px 0px;   
+        }
+    }
 
+    .what-we-do-container{
+        height: fit-content !important;
+        .main-text{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            .text{
+                h3{
+                    margin-bottom: 130px;
+                }
+            }
+            .text , .services{
+                display: flex;
+                padding: 10px;
+                p{
+                    width: 100%;
+                }
+                align-items: center;
+                justify-content: center;
+                text-align: center;
+                .service{
+                    justify-content: center;
+                    flex-direction: column;
+                    span{
+                        // width: 70%;
+                    }
+                }
+            }
+        }
+        .text-container{
+            padding: 0px;
+        }
 
+    } 
+}
 
-
-// end navbar 
+// end swipers
