--- a/src/assets/styles/mobile.scss
+++ b/src/assets/styles/mobile.scss
@@ -19,6 +19,9 @@
             .close-icon {
                 display: block !important;
             }
+            // &.mob{
+            //     top: -100%;
+            // }
         }
         .open-bar-nav {
             display: block !important;
@@ -42,13 +45,16 @@
 
 @media (max-width: 900px) {
     footer {
+        text-align: center;
         .logo-container {
             align-items: center;
         }
         .links-container {
+            text-align: center;
             h5 {
                 font-size: 18px;
             }
+            
             .links {
                 gap: 18px;
                 .link {
@@ -56,6 +62,9 @@
                 }
             }
             &.contact {
+                h5{
+                    margin-bottom: 10px;
+                }
                 .links {
                     gap: 15px;
                 }
@@ -70,7 +79,9 @@
 
 @media (max-width: 900px) {
     .mySwiper {
+        height: 80vh;
         .text {
+            margin-top: 50px;
             width: auto !important;
             padding: 20px !important;
         }
@@ -128,6 +139,77 @@
         }
 
     } 
+
+    .services-container{
+        .text-container{
+            h3{
+                font-size: 30px;
+            }
+            h2{
+                font-size: 28px;
+                line-height: 40px;
+                br{
+                    display: none;
+                }
+            }
+        }
+        .services{
+            .text{
+                h5{
+                    font-size: 18px !important;
+                    font-weight: 700;
+                }
+                p{
+                    font-size: 16px !important;
+                    line-height: 35px;
+                }
+            }
+            .seprator{
+                &.mobile{
+                    display: block !important;
+                }
+            }
+        }
+    }
+
+
+    .products-container{
+        .filter-container{
+            .filters{
+                width: 100%;
+                height: fit-content;
+                &::before{
+                    content: '';
+                    display: none;  
+                }
+            }
+        }
+    }
+
+    .product-page{
+        text-align: center;
+        .image{
+            img{
+                width: 100%;
+            }
+        }
+        .system-container{
+            .title{
+                width: 100% !important;
+                span{
+                    font-size: 25px;
+                }
+            }
+            img{
+                width: 100%;
+            }
+        }
+        .features{
+            .item{
+                align-items: center;
+            }
+        }
+    }
 }
 
 // end swipers
