--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -1,43 +1,60 @@
-
-@import './core.scss';
-*{
+@import "./core.scss";
+@import url("https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&display=swap");
+* {
     padding: 0px;
     margin: 0px;
     box-sizing: border-box;
 }
 
-body , html{
+body,
+html {
     overflow: clip;
     width: 100%;
 }
-body{
+body {
+    font-family: "Kumbh Sans", sans-serif !important;
 }
 
-
-a{
+a {
     color: inherit;
     text-decoration: none !important;
 }
 
-.m-top{
+.m-top {
     margin-top: 80px;
 }
 
-.m-bottom{
+.m-bottom {
     margin-top: 80px;
 }
 
-.Btn{
+.head-text {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    span,
+    i {
+        z-index: 1;
+        color: #fff;
+    }
+    span {
+        font-size: 16px;
+        text-transform: uppercase;
+        font-weight: 700;
+    }
+}
+
+.Btn {
     width: 160px;
     height: 43px;
     display: flex;
     align-items: center;
     justify-content: center;
-    color: #1C1C1C;
-    border: 1px solid #1C1C1C;
+    color: #1c1c1c;
+    border: 1px solid #1c1c1c;
     font-weight: 600;
     text-transform: capitalize;
-    &.primary{
+    &.primary {
         border: 1px solid $primary;
         background-color: $primary;
     }
