--- a/src/assets/styles/_base.scss
+++ b/src/assets/styles/_base.scss
@@ -10,6 +10,7 @@ body,
 html {
     overflow: clip;
     width: 100%;
+    direction: ltr;
 }
 body {
     font-family: "Kumbh Sans", sans-serif !important;
