--- a/src/assets/styles/_layout.scss
+++ b/src/assets/styles/_layout.scss
@@ -121,7 +121,7 @@
 // start footer 
 
 footer{
-    background-color: $black2;
+    background-color: #373737;
     width: 100%;
 //   padding: 50px;
 .logo-container{
