--- a/src/assets/styles/_sections.scss
+++ b/src/assets/styles/_sections.scss
@@ -721,7 +721,7 @@
         img {
             // width: 100%;
             object-fit: cover;
-            // height: 465px;
+            height: 465px;
         }
     }
 
