--- a/src/assets/styles/_sections.scss
+++ b/src/assets/styles/_sections.scss
@@ -126,6 +126,12 @@
             align-items: center;
             gap: 15px;
 
+            img{
+                width: 45px;
+                height: 45px;
+                object-fit: contain;
+            }
+
             span {
                 color: #fff;
             }
@@ -719,7 +725,8 @@
         }
 
         img {
-            // width: 100%;
+            width: 100%;
+            margin-bottom: 30px;
             object-fit: cover;
             height: 465px;
         }
@@ -805,7 +812,7 @@
     .background-container {
         width: 100%;
         height: 80vh;
-        background-image: url('../images/about-back.png');
+        // background-image: url('../images/about-back.png');
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;
@@ -1148,3 +1155,23 @@
 }
 
 // end videos page 
+
+// start terms and conditions 
+
+.terms-conditions{
+    margin-top: 140px;
+    h1{
+        color: #373737;
+        font-size: 40px;
+        margin-bottom: 45px;
+        font-weight: 700;
+    }
+    p{
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 19.36px;
+        color: #373737;
+    }
+}
+
+// end terms and conditions 
