--- a/src/assets/styles/_sections.scss
+++ b/src/assets/styles/_sections.scss
@@ -166,6 +166,12 @@
         gap: 20px;
         margin: 20px 0px;
         text-align: center;
+        &.product{
+            img{
+                width: 60px;
+                object-fit: contain;
+            }
+        }
 
         &.video {
             width: 100%;
@@ -211,9 +217,10 @@
     }
 }
 
+
 .videos-home {
     background-color: #C8C8C8E0;
-
+    
     &.page {
         background-color: transparent;
     }
@@ -837,8 +844,9 @@
             flex-direction: column;
 
             p {
-                color: #fff;
-                z-index: 1;
+                color: #fff !important;
+                z-index: 1 !important;
+                position: relative;
                 width: 90%;
                 text-align: center;
             }
@@ -953,7 +961,9 @@
     .form-container {
         background-color: #E8E8E8;
         padding-bottom: 50px;
-
+        iframe{
+            width: 100% !important;
+        }
         .main-text {
             h4 {
                 color: #373737;
@@ -1109,51 +1119,51 @@
         }
     }
 
-    .pagination {
-        margin-top: 100px;
+}
+
+.pagination {
+    margin-top: 100px;
+    display: flex;
+    align-items: center;
+    gap: 15px;
+
+    i,
+    span {
+        color: #393939;
+        cursor: pointer;
+    }
+
+    .nums {
         display: flex;
         align-items: center;
-        gap: 15px;
+        gap: 5px;
 
-        i,
-        span {
-            color: #393939;
-            cursor: pointer;
-        }
-
-        .nums {
+        .num {
             display: flex;
             align-items: center;
-            gap: 5px;
+            justify-content: center;
+            width: 42px;
+            height: 42px;
+            cursor: pointer;
 
-            .num {
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                width: 42px;
-                height: 42px;
-                cursor: pointer;
+            // background-color: red;
+            &.active {
+                background-color: #393939;
+                border-radius: 50%;
 
-                // background-color: red;
-                &.active {
-                    background-color: #393939;
-                    border-radius: 50%;
-
-                    span {
-                        color: #fff;
-                    }
+                span {
+                    color: #fff;
                 }
             }
+        }
 
-            span {
-                font-weight: 700;
-                font-size: 22px;
+        span {
+            font-weight: 700;
+            font-size: 22px;
 
-            }
         }
     }
 }
-
 // end videos page 
 
 // start terms and conditions 
