--- a/src/assets/rtl/main-rtl.scss
+++ b/src/assets/rtl/main-rtl.scss
@@ -648,7 +648,7 @@ a {
 }
 
 .services-container {
-  background-image: url("../images/Background-Services.png");
+  background-image: url("./images/Background-Services.png");
   min-height: 100vh;
   background-position: center;
   background-repeat: no-repeat;
@@ -747,7 +747,7 @@ a {
 .products-container .background-container {
   width: 100%;
   height: 350px;
-  background-image: url("../images/products-back.png");
+  background-image: url("./images/products-back.png");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -887,7 +887,7 @@ a {
 .product-page .background-container {
   width: 100%;
   height: 350px;
-  background-image: url("../images/products-back.png");
+  background-image: url("./images/products-back.png");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -977,7 +977,7 @@ a {
 .brands-container-page .background-container {
   width: 100%;
   height: 350px;
-  background-image: url("../images/brands-back.png");
+  background-image: url("./images/brands-back.png");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -1093,7 +1093,7 @@ a {
 .contact-page .background-container {
   width: 100%;
   height: 350px;
-  background-image: url("../images/contact-back.png");
+  background-image: url("./images/contact-back.png");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -1203,7 +1203,7 @@ a {
 .videos-page .background-container {
   width: 100%;
   height: 80vh;
-  background-image: url("../images/videos-back.png");
+  background-image: url("./images/videos-back.png");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
