--- a/src/assets/styles/_sections.scss
+++ b/src/assets/styles/_sections.scss
@@ -346,7 +346,7 @@
 // start services page 
 
 .services-container {
-    background-image: url('../images/Background-Services.png');
+    background-image: url('./images/Background-Services.png');
     min-height: 100vh;
     background-position: center;
     background-repeat: no-repeat;
@@ -475,7 +475,7 @@
     .background-container {
         width: 100%;
         height: 350px;
-        background-image: url('../images/products-back.png');
+        background-image: url('./images/products-back.png');
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;
@@ -657,7 +657,7 @@
     .background-container {
         width: 100%;
         height: 350px;
-        background-image: url('../images/products-back.png');
+        background-image: url('./images/products-back.png');
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;
@@ -773,7 +773,7 @@
     .background-container {
         width: 100%;
         height: 350px;
-        background-image: url('../images/brands-back.png');
+        background-image: url('./images/brands-back.png');
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;
@@ -926,7 +926,7 @@
     .background-container {
         width: 100%;
         height: 350px;
-        background-image: url('../images/contact-back.png');
+        background-image: url('./images/contact-back.png');
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;
@@ -1057,7 +1057,7 @@
     .background-container {
         width: 100%;
         height: 80vh;
-        background-image: url('../images/videos-back.png');
+        background-image: url('./images/videos-back.png');
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;
