--- a/src/assets/rtl/main-rtl.scss
+++ b/src/assets/rtl/main-rtl.scss
@@ -1,83 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&display=swap");
-* {
-  padding: 0px;
-  margin: 0px;
-  box-sizing: border-box;
-}
-
-body,
-html {
-  overflow: clip;
-  width: 100%;
-  direction: rtl;
-}
-
-body {
-  font-family: "Kumbh Sans", sans-serif !important;
-}
-
-a {
-  color: inherit;
-  text-decoration: none !important;
-}
-
-.m-top {
-  margin-top: 80px;
-}
-
-.m-bottom {
-  margin-top: 80px;
-}
-
-.head-text {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-}
-.head-text span,
-.head-text i {
-  z-index: 1;
-  color: #fff;
-}
-.head-text span {
-  font-size: 16px;
-  text-transform: uppercase;
-  font-weight: 700;
-}
-
-.Btn {
-  width: 160px;
-  height: 43px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: #1c1c1c;
-  border: 1px solid #1c1c1c;
-  font-weight: 600;
-  text-transform: capitalize;
-}
-.Btn.primary {
-  border: 1px solid #FFDD00;
-  background-color: #FFDD00;
-}
-
-.up-page {
-  position: fixed;
-  top: 90%;
-  left: 40px;
-  cursor: pointer;
-  transition: 0.5s all;
-  transform: translateX(-300px);
-  z-index: 11111;
-}
-.up-page.active {
-  transform: translateX(0);
-}
-.up-page img {
-  width: 40px;
-}
-
 .navbar-container {
   background-color: rgba(55, 55, 55, 0.7450980392);
   color: #fff;
@@ -295,84 +215,6 @@ footer .foot p.active, footer .foot span.active {
 }
 .mySwiper .swiper-pagination .swiper-pagination-bullet.swiper-pagination-bullet-active {
   background-color: #D9D9D9;
-}
-
-* {
-  padding: 0px;
-  margin: 0px;
-  box-sizing: border-box;
-}
-
-body,
-html {
-  overflow: clip;
-  width: 100%;
-  direction: rtl;
-}
-
-body {
-  font-family: "Kumbh Sans", sans-serif !important;
-}
-
-a {
-  color: inherit;
-  text-decoration: none !important;
-}
-
-.m-top {
-  margin-top: 80px;
-}
-
-.m-bottom {
-  margin-top: 80px;
-}
-
-.head-text {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-}
-.head-text span,
-.head-text i {
-  z-index: 1;
-  color: #fff;
-}
-.head-text span {
-  font-size: 16px;
-  text-transform: uppercase;
-  font-weight: 700;
-}
-
-.Btn {
-  width: 160px;
-  height: 43px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: #1c1c1c;
-  border: 1px solid #1c1c1c;
-  font-weight: 600;
-  text-transform: capitalize;
-}
-.Btn.primary {
-  border: 1px solid #FFDD00;
-  background-color: #FFDD00;
-}
-
-.up-page {
-  position: fixed;
-  top: 90%;
-  left: 40px;
-  cursor: pointer;
-  transition: 0.5s all;
-  transform: translateX(-300px);
-  z-index: 11111;
-}
-.up-page.active {
-  transform: translateX(0);
-}
-.up-page img {
-  width: 40px;
 }
 
 .brands-container img {
@@ -822,18 +664,13 @@ a {
   color: #373737;
 }
 .products-container .products .search-container {
-  background-color: #D2D1D1;
   width: 360px;
   height: 46px;
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 0px 10px;
-}
-.products-container .products .search-container .line {
-  width: 1px;
-  height: 30px;
-  background-color: #878787;
+  border-bottom: 1px solid #878787;
 }
 .products-container .products .search-container i {
   cursor: pointer;
