--- a/src/assets/styles/_sections.scss
+++ b/src/assets/styles/_sections.scss
@@ -568,19 +568,19 @@
 
     .products {
         .search-container {
-            background-color: #D2D1D1;
+            // background-color: #D2D1D1;
             width: 360px;
             height: 46px;
             display: flex;
             align-items: center;
             justify-content: space-between;
             padding: 0px 10px;
-
-            .line {
-                width: 1px;
-                height: 30px;
-                background-color: #878787;
-            }
+             border-bottom: 1px solid #878787;
+            // .line {
+            //     width: 1px;
+            //     height: 30px;
+            //     background-color: #878787;
+            // }
 
             i {
                 cursor: pointer;
