--- a/src/assets/styles/_sections.scss
+++ b/src/assets/styles/_sections.scss
@@ -7,6 +7,7 @@
 .brands-container {
     img {
         width: 165px;
+        height: 160px;
         object-fit: cover;
     }
 }
@@ -60,7 +61,7 @@
 
 .what-we-do-container {
     height: 600px;
-
+      direction: ltr;
     .img-container {
         background-color: $primary;
         height: 100%;
@@ -127,9 +128,9 @@
             gap: 15px;
 
             img{
-                width: 45px;
-                height: 45px;
-                object-fit: contain;
+                width: 60px;
+                height: 50px;
+                object-fit: cover;
             }
 
             span {
@@ -168,8 +169,9 @@
         text-align: center;
         &.product{
             img{
-                width: 60px;
-                object-fit: contain;
+                width: 65px;
+                height: 65px;
+                object-fit: cover;
             }
         }
 
@@ -694,6 +696,17 @@
             font-weight: 700;
             color: #393939;
             margin-bottom: 20px;
+        }
+
+        .image{
+            width: 100%;
+            .swiper-slide{
+                height: 543px;
+                img{
+                    height: 100%;
+                    object-fit: cover;
+                }
+            }
         }
 
         .text-container {
